--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "eslint": "^8.28.0",
     "expo": "~45.0.0",
+    "expo-keep-awake": "~10.1.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
